[package]
name = "unreliable-message"
version = "0.0.6"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "MIT"
description = "An implementation of unreliable message sending over UDP"

[lib]
path = "./src/lib.rs"
name = "unreliable_message"

[dependencies]
bincode = "0.5.*"
rustc-serialize = "0.3.*"
vec_map = "0.0.1"
